--- a/src/infinitycom/Admin_panel.form
+++ b/src/infinitycom/Admin_panel.form
@@ -1009,7 +1009,7 @@
                                               <Group type="103" groupAlignment="1" attributes="0">
                                                   <Component id="add_selling_price" alignment="0" max="32767" attributes="0"/>
                                                   <Component id="jLabel19" alignment="0" max="32767" attributes="0"/>
-                                                  <Component id="add_stock_price" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="add_purchasing_price" alignment="0" max="32767" attributes="0"/>
                                                   <Component id="jLabel18" alignment="0" max="32767" attributes="0"/>
                                                   <Component id="jLabel17" alignment="0" max="32767" attributes="0"/>
                                                   <Component id="add_qty" alignment="0" max="32767" attributes="0"/>
@@ -1054,7 +1054,7 @@
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="jLabel18" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="add_stock_price" min="-2" max="-2" attributes="0"/>
+                                      <Component id="add_purchasing_price" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="jLabel19" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
@@ -1158,7 +1158,7 @@
                                 </Property>
                               </Properties>
                             </Component>
-                            <Component class="javax.swing.JTextField" name="add_stock_price">
+                            <Component class="javax.swing.JTextField" name="add_purchasing_price">
                               <Properties>
                                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                                   <Font name="Tahoma" size="14" style="0"/>
@@ -1170,7 +1170,7 @@
                                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                                   <Font name="Tahoma" size="14" style="0"/>
                                 </Property>
-                                <Property name="text" type="java.lang.String" value="Stock price"/>
+                                <Property name="text" type="java.lang.String" value="purchasing price per unit"/>
                               </Properties>
                             </Component>
                             <Component class="javax.swing.JTextField" name="add_selling_price">
@@ -1185,7 +1185,7 @@
                                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                                   <Font name="Tahoma" size="14" style="0"/>
                                 </Property>
-                                <Property name="text" type="java.lang.String" value="Selling price"/>
+                                <Property name="text" type="java.lang.String" value="Selling price per unit"/>
                               </Properties>
                             </Component>
                           </SubComponents>
